--- a/jquery-exercises.html
+++ b/jquery-exercises.html
@@ -28,7 +28,7 @@
             <p>Click the button to change the background color of this paragraph.</p>
             <button>Click me!</button>
         </div>
-        <script src="jquery/jquery-2.2.4.js" ></script>
+        <script src="../oberon-dom-assessment/examples/jquery-2.2.4.js" ></script>
         <script type="text/javascript" src="JS/query.js"></script>
 
     </body>
