--- a/jquery-exerciese-card.html
+++ b/jquery-exerciese-card.html
@@ -143,9 +143,9 @@
         </div>
       </section>
     </main>
-    <script src="node_modules/jquery/dist/jquery.min.js"></script>
-    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>
-    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<!--    <script src="node_modules/jquery/dist/jquery.min.js"></script>-->
+<!--    <script src="node_modules/popper.js/dist/umd/popper.min.js"></script>-->
+<!--    <script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>-->
     <script src="js/jquery-exerciese-card.js"></script>
   </body>
 </html>
