--- a/order-pizza.html
+++ b/order-pizza.html
@@ -5,7 +5,7 @@
         <title>Welcome to Pizza World, yo!</title>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-        <link rel="stylesheet" href="css/custom.csss">
+        <link rel="stylesheet" href="css/custom.css">
     </head>
     <body>
         <nav class="navbar navbar-default">
