--- a/query.html
+++ b/query.html
@@ -98,7 +98,7 @@
 <!--        <script src="https://code.jquery.com/jquery-2.2.4.min.js"-->
 <!--                integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="-->
 <!--                crossorigin="anonymous"></script>-->
-                <script src="jquery/jquery-2.2.4.js" ></script>
+                <script src="../oberon-dom-assessment/examples/jquery-2.2.4.js" ></script>
 
         <script src="JS/query.js"></script>
     </body>
